# SofAR_Assignment1

./: .gitignore  README.md  TIAGo_topics.txt  old_run_ui.sh  run.sh  run_hack.sh  run_ui.sh  utils.txt
assignment_pkg/: package.xml  setup.py
assignment_ws/install/: local_setup.sh  setup.sh
assignment_ws/launch/: assignment_launch.py
assignment_ws/log/: latest_build
assignment_ws/src/assignment_pkg/: setup.py
install/: local_setup.sh  setup.sh
log/: latest_build
presentation/: Presentazione_SofAR_Maraglia.textClipping  ~$Presentazione_SofAR_Maragliano_Musumeci_Parisi.pptx
ros_ws/devel/: .catkin  .rosinstall  local_setup.sh
ros_ws/src/ros1_tiago/: CMakeLists.txt  package.xml
src/assignment_pkg/: package.xml  setup.py
src/assignment_pkg/launch/: assignment_launch.py
src/assignment_pkg/resource/: tiago_robot.urdf
src/assignment_ws/: setup.py
src/assignment_ws/launch/: assignment_launch.py
src/bridge_qos_hack/: package.xml  setup.cfg  setup.py
src/bridge_qos_hack/bridge_qos_hack/: durability_hack.py
src/bridge_qos_hack/launch/: durability_hack_launch.py
src/my_bringup/: CMakeLists.txt  package.xml
src/my_bringup/launch/: bringup_launch.py  localization_launch.py  navigation_bridge_launch.py  navigation_launch.py  rviz_launch.py  slam_launch.py  spawn_tb3_launch.py  tb3_simulation_launch.py  teleop_launch.py  two_tb3_simulation_launch.py  (+1 more)
src/my_commander/: package.xml  setup.cfg  setup.py
src/nav2_gazebo_spawner/: package.xml
src/policy_controller/: CMakeLists.txt  package.xml  setup.cfg  setup.py
src/policy_controller/launch/: policy_launch.py  tiago_policy_controller.launch  tiago_policy_controller_launch.py
src/policy_controller/policy_controller/: policy_controller.py
src/policy_controller/scripts/: policy_controller.py
src/robot_controller/: CMakeLists.txt  package.xml  setup.py
src/robot_driver_pkg/: package.xml  setup.cfg  setup.py
src/robot_ui/: package.xml  setup.py
src/sam_bot_description/: CMakeLists.txt  package.xml
src/sofar_assignment/: package.xml  setup.py
src/sofar_assignment_pkg/: package.xml  setup.cfg  setup.py
src/test_commander/: package.xml  setup.cfg  setup.py
(+132 files in other folders)
