<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>assignment_pkg</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="S4636216@studenti.unige.it">matteomaragliano</maintainer>
  <license>TODO: License declaration</license>

  <depend>rclpy</depend>
  <depend>builtin_interfaces</depend>
  <depend>control_msgs</depend>
  <depend>trajectory_msgs</depend>  
  <depend>sensor_msgs</depend>
  <depend>webots_ros2_driver</depend>
  <depend>webots_ros2_control</depend>
  <depend>robot_state_publisher</depend>
  <depend>controller_manager</depend>
  <depend>joint_trajectory_controller</depend>
  <depend>joint_state_broadcaster</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
